2011-10-11  Manuel Koller  <koller@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.7-8

	* man/lmrob.Rd: See also extended with lmrob..M..fit.

	* man/lmrob..M..fit.Rd: Extended example with function lmrob.custom.

	* R/lmrob.MM.R (lmrob.tau): moving calculation of h to the inside
	of the function, so that obj$qr is not required.

	* R/ltsPlot.R (ltsPlot, myqqplot): removed superfluous title().

2011-10-11  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/rfltsreg.f: add 'implicit none' and declare everything;
	new gfortran gave (correct) warnings.

	* R/nlrob.R, man/nlrob.Rd: finally fix "fitted.values"
	* tests/nlrob-tst.R (new): start more testing of nlrob()!

2011-08-09  Manuel Koller  <koller@stat.math.ethz.ch>

	* R/plot.lmrob.R (plot.lmrob): Fixing bug reported by Andreas
	Papritz. is.null(x$x) is always FALSE since there is always
	x$xlevels present.

	* inst/doc/lmrob_simulation.Rnw (f.gen): load(file) was missing the
	proper path.

2011-05-24  Manuel Koller  <koller@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.7-6, released to CRAN today

	* inst/doc/lmrob_simulation.Rnw: cleaned up chunk headers.

	* inst/doc/Makefile: added Makefile that runs qpdf after texi2pdf.

2011-05-23  Manuel Koller  <koller@stat.math.ethz.ch>

	* DESCRIPTION (Version, Date): 0.7-5

	* man/lmrob..D..fit.Rd: updated reference to Koller and Stahel
	2011 (now with volume, issue and page numbers).
	* man/lmrob.control.Rd: updated reference.
	* man/lmrob.Rd: update reference.
	* inst/doc/lmrob_simulation.bib: updated reference.

	* inst/doc/estimating.functions.R (robustness.weights.lmrob.S):
	fixed typo.

2011-03-17  Manuel Koller  <koller@stat.math.ethz.ch>

	* DESCRIPTION (Version, Date): 0.7-4

	* inst/doc/lmrob_simulation.Rnw: Fixed problem with paths in
	source(), save() and load().

2011-03-08  Manuel Koller  <koller@stat.math.ethz.ch>

	* DESCRIPTION (Version, Suggests): 0.7-3 and added xtable and
	ggplot2 to Suggests.
