@@ -43,10 +43,6 @@ o ltsReg():  has  undocumented '$resid'
 
 --- glmrob --
 
-o Want residuals.glmrob() which allows a 'type = *' specification like
-  the *.glm() methods:
-  residuals(<glmrob>) gives "bad error" -- because of missing  object$df.residual
-
 o glmrob(*, weights.on.x = "robCov")  currently uses  MASS::cov.rob(), i.e.
   "MVE" and Andreas had a comment that "mcd" is worse.
   But still, I (MM) strongly believe we should use  covMcd() instead.
